fix select options collapsed interactive

--- a/style.css
+++ b/style.css
@@ -82,8 +82,9 @@ textarea
 	transition-duration        : 0ms; /* don't animate short lists */
 	transition-timing-function : ease-out;
 
-	opacity: 0;
-	overflow-y: auto;
+	pointer-events : none;
+	opacity        : 0;
+	overflow-y     : auto;
 
 	background-color: white;
 
@@ -91,11 +92,25 @@ textarea
 	/* http://stackoverflow.com/questions/7473200/transparent-border-expands-background-color-image */
 	background-clip         : padding-box;
 	-webkit-background-clip : padding-box;
+
+	transform: scaleY(0);
+	transform-origin: 50% top 0px;
+
+	/* 250ms - too slow for short lists */
+	transition: all 150ms cubic-bezier(.76,.04,.46,.75) 0ms;
 }
 
 .rrui__select__options--expanded
 {
+	pointer-events : auto;
+	opacity        : 1;
+
 	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+
+	transform: scaleY(1);
+	transform-origin: 50% top 0px;
+
+	transition: all 150ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 }
 
 .rrui__select__options--simple-left-aligned
@@ -106,11 +121,6 @@ textarea
 .rrui__select__options--simple-right-aligned
 {
 	right : calc(0.3rem * 4 * -1) !important;
-}
-
-.rrui__select__options--expanded
-{
-	opacity: 1;
 }
 
 .rrui__select__option
@@ -150,15 +160,6 @@ textarea
 	padding-bottom   : calc(0.3rem * 2);
 }
 
-.rrui__select__options
-{
-	transform: scaleY(0);
-	transform-origin: 50% top 0px;
-
-	/* 250ms - too slow for short lists */
-	transition: all 150ms cubic-bezier(.76,.04,.46,.75) 0ms;
-}
-
 .rrui__select__options li
 {
 	opacity: 0;
@@ -170,14 +171,6 @@ textarea
 .rrui__select--upward .rrui__select__options
 {
 	transform-origin: 50% bottom 0px;
-}
-
-.rrui__select__options--expanded
-{
-	transform: scaleY(1);
-	transform-origin: 50% top 0px;
-
-	transition: all 150ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 }
 
 .rrui__select__options--expanded li
